--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: daattali/beautiful-jekyll
 title: NeuroPRISM Lab
-author: Stephanie Noble
-description: All things academia.
+author: Stephanie Noble & Hallee Shearer
+description: Peeking inside the brain.
 
 # --- List of links in the navigation bar --- #
 
@@ -9,7 +9,6 @@ navbar-links:
   Join us!: "opportunities"
   Projects: "projects"
   Members: "members"
-  # CV: /img/SMN_CV_Jan_2024.pdf
   Publications: "https://scholar.google.com/citations?user=JxQdvn4AAAAJ&hl=en&oi=sra"
   Resources: "resources" 
   
